--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -4,7 +4,7 @@
 
 {% include "header.html" %}
 
-<div class="favorites">
+<div class="favorites-header">
     <h1 class="header">
         Favorites
     </h1>
