--- a/templates/add_favorites.html
+++ b/templates/add_favorites.html
@@ -24,7 +24,7 @@
             {% endfor %}
         </select>
         <div class="submit-favorite">
-            <button onclick="addFavorite()">Add Favorite</button>
+            <button onclick="addFavorite()">Add favorites</button>
         </div>
     </div>
     <script>
