--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -18,8 +18,8 @@
         {% endfor %}
     </ul>
 </div>
-<div class="add-favorites-button-container">
-    <button class="add-favorites-button" onclick="window.location.href='/add-favorites'">Add favorites</button>
+<div class="add-favorite-button-container">
+    <button class="add-favorite-button" onclick="window.location.href='/add-favorite'">Add favorites</button>
 </div>
 <script>
     function removeFavorite(fav) {
