--- a/static/styles/favorite.css
+++ b/static/styles/favorite.css
@@ -31,12 +31,12 @@
     margin-left: auto;
 }
 
-.add-favorites-button-container {
+.add-favorite-button-container {
     margin-inline-start: auto;
     margin-inline-end: auto;
 }
 
-.add-favorites-button {
+.add-favorite-button {
     margin-inline-start: auto;
     margin-inline-end: auto;
 }
