--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -19,7 +19,7 @@
         </ul>
     </div>
     <div class="add-favorite-button-container">
-        <button class="add-favorite-button" onclick="window.location.href='/add-favorite'">Add favorites</button>
+        <button class="add-favorite-button" onclick="window.location.href='/add-favorite'">Add favorite</button>
     </div>
     <script>
         function removeFavorite(fav) {
