--- a/static/styles/favorite.css
+++ b/static/styles/favorite.css
@@ -31,12 +31,12 @@
     margin-left: auto;
 }
 
-.add-favorite-button-container {
+.add-favorites-button-container {
     text-align: center;
     margin-bottom: 20px;
     margin-top: 20px;
 }
 
-.add-favorite-button {
+.add-favorites-button {
     justify-content: center;
 }
