Updates routes for back button

--- a/templates/about.html
+++ b/templates/about.html
@@ -2,6 +2,13 @@
 
 {% block content %}
 
+{% include "header.html" %}
+
 {% include "footer.html" %}
 
+<script>
+    function goHome() {
+        window.location.href="/home";
+    }
+</script>
 {% endblock %}
