--- a/templates/alerts.html
+++ b/templates/alerts.html
@@ -6,4 +6,10 @@
 
 {% include "footer.html" %}
 
+<script>
+    function goHome() {
+        window.location.href="/home";
+    }
+</script>
+
 {% endblock %}
