--- a/templates/classes.html
+++ b/templates/classes.html
@@ -9,17 +9,25 @@
         Classes
     </h1>
 </div>
+
+{% if classData|length > 0: %}
 <div class="class-container">
     <ul id="class-list">
         {% for course in classData %}
             <li class="course-list">
-                Course Name: {{ course[4] }}, Building: {{ course[1] }} <button class="delete-btn" onclick='var course = "{{ course[4] }}";var location="{{ course[1] }}";removeClass(course,location);'>Remove</button><script></script>
+                Course Name: {{ course[4] }}, Building: {{ course[1] }} <i class="fa-solid fa-trash" onclick='var course = "{{ course[4] }}";var location="{{ course[1] }}";removeClass(course,location);'></i>
             </li>
         {% endfor %}
     </ul>
 </div>
+{% else %}
+<div class="empty-data-container">
+    <h3 class="empty-data-header">Press the "Add Class" button to add your classes</h3>
+</div>
+{% endif %}
+
 <div class="add-class-button-container">
-    <button class="add-class-button" onclick="window.location.href='/add-classes'">Add Class</button>
+    <button class="add-class-button add-data-btn" onclick="window.location.href='/add-classes'">Add Class<i class="fa-solid fa-plus"></i></button>
 </div>
 
 {% include "footer.html" %}
@@ -29,13 +37,16 @@
 
         console.log(course)
         $.ajax({
-            type: "POST",
+            type: "DELETE",
             url: "/classes",
             data: { "course": course , "location": location}, 
             contentType: 'application/json;charset=UTF-8',
             dataType: 'json',
             success: function(data) {
-                console.log('successfully posted data! response body: ' + data);
+                console.log('successfully deleted data!');
+            },
+            complete: function() {
+                window.location.reload();
             }
         });
     }
