--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{ url_for('static',filename='styles/add_favorite.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/favorites.css') }}">
     <link rel="stylesheet" href="{{ url_for('static',filename='styles/classes.css') }}">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/d09ca4d1cb.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
