--- a/templates/interactive_map.html
+++ b/templates/interactive_map.html
@@ -5,7 +5,7 @@
 {% include "header.html" %}
 
 <div class="route-selection-container">
-    <div class="class-container">
+    <div class="route-class-container">
         <label for="class-selector">Class destination</label>
         <select id="class-selector">
             <option class="course-option" value="" selected></option>
