--- a/templates/header.html
+++ b/templates/header.html
@@ -1,8 +1,14 @@
 <div class="ezpark-container">
-    <h1 class="ezpark-container-header">EZPark</h1>
+    <h1 class="ezpark-container-header" onclick="goHomePage()">EZPark</h1>
     {% if not settingsDisplay %}
     <div class="ezpark-container-header-buttons">
         <a href="/profile" class="profile"><i class="fa fa-user-circle"></i></a>
     </div>
     {% endif %}
 </div>
+
+<script>
+    function goHomePage() {
+        window.location.href="/home";
+    }
+</script>
