--- a/templates/home.html
+++ b/templates/home.html
@@ -18,10 +18,11 @@
         <div class="alert-btn">
             <a href="/alerts">Alerts</a>
         </div>
+        <div class="feedback-btn">
+            <a href="/feedback">Feedback</a>
+        </div>
     </div>
-    <div class="feedback-btn">
-        <p><a href="/feedback">Feedback</a></p>
-    </div>
+
 </div>
 
 {% include "footer.html" %}
