--- a/templates/home.html
+++ b/templates/home.html
@@ -18,11 +18,10 @@
         <div class="alert-btn">
             <a href="/alerts">Alerts</a>
         </div>
-        <div class="feedback-btn">
-            <a href="/feedback">Feedback</a>
-        </div>
     </div>
-
+    <div class="feedback-btn">
+        <a href="/feedback">Send Feedback</a>
+    </div>
 </div>
 
 {% include "footer.html" %}
