--- a/static/styles/feedback.css
+++ b/static/styles/feedback.css
@@ -1,46 +1,35 @@
-/* label[for="feedback"] {
-    display: block;
-    text-align: center;
-    font-weight: bold;
-    color: #C9E03C;
-  }
-  
-#feedback {
-    display: block;
-    margin: 0 auto;
-  } */
+.feedback-header {
+  margin: 10px;
+}
 
-
+.header {
+  color: #C9E03C;
+  text-align: center;
+  margin: 0;
+}
 
 .feedback-container {
-    margin: 2rem auto;
-    width: 80%;
-    max-width: 600px;
-    background-color: #ffffff;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .feedback-container h2 {
-    text-align: center;
-    color: #1C732F;
-  }
-  
-  #feedbackForm {
-    text-align: center;
-  }
-  
-  #feedbackForm label {
-    display: block;
-    margin-bottom: 5px;
-    color: #1C732F;
-  }
-  
-  #feedbackForm textarea {
-    width: 100%;
-    resize: vertical;
-    padding: 8px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-  }  
+  text-align: center;
+}
+
+#feedback {
+  width: 80%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  resize: vertical;
+}
+
+#feedbackForm input[type="button"] {
+  padding: 5px 10px;
+  background-color: #C9E03C;
+  color: #000000;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+#feedbackForm input[type="button"]:hover {
+  background-color: #505a0f;
+}
